--- a/deployment-1.yml
+++ b/deployment-1.yml
@@ -5,7 +5,7 @@ metadata:
     app: app
   name: app
 spec:
-  replicas: 6
+  replicas: 3
   selector:
     matchLabels:
       app: app
@@ -17,6 +17,6 @@ spec:
         app: app
     spec:
       containers:
-      - image: httpd
-        name: httpd
+      - image: nginx
+        name: nginx
         resources: {}
